warm up + longadder in microbench